--- a/Binding/Android/FrescoImageViewer/FrescoImageViewer.csproj
+++ b/Binding/Android/FrescoImageViewer/FrescoImageViewer.csproj
@@ -104,7 +104,7 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="Jars\frescoimageviewer-0.5.0.aar" />
+    <LibraryProjectZip Include="Jars\frescoimageviewer-0.6.0.aar" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -117,6 +117,9 @@
       <Project>{0f034a8c-7c72-430b-a0fe-3574e88707f3}</Project>
       <Name>PhotoDraweeView</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedJar Include="Jars\androidsvg-1.2.0.jar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <Import Project="..\..\..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\..\..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets')" />
