--- a/PhotoBrowser/PhotoBrowser.iOS/packages.config
+++ b/PhotoBrowser/PhotoBrowser.iOS/packages.config
@@ -3,5 +3,11 @@
   <package id="Ricardo.MBProgressHUD.iOS" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Ricardo.MWPhotoBrowser.iOS" version="2.1.4.1" targetFramework="xamarinios10" />
   <package id="Ricardo.SDWebImage.iOS" version="4.2.2.1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.60.0" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.8" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.4.4.859" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.4.4.859" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.4.4.859" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.4.4.859" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="3.4.0.1008975" targetFramework="xamarinios10" />
 </packages>
