--- a/PhotoBrowser/PhotoBrowser/PhotoBrowser.csproj
+++ b/PhotoBrowser/PhotoBrowser/PhotoBrowser.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.4.859" />
+    <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.4.859" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.4.859" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg" Version="2.4.4.859" />
   </ItemGroup>
 
 </Project>
